--- a/index.html
+++ b/index.html
@@ -93,56 +93,56 @@
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img" src="" data-origin-src="img/test1/1.jpg" alt="설명">
+                            <img class="img" src="" data-origin-src="img/wedding_pick/1.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img" src="" data-origin-src="./src/img/test1/2.jpg" alt="설명">
+                            <img class="img" src="" data-origin-src="./src/img/wedding_pick/2.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img swiper-lazy" src="" data-src="./src/img/test1/3.jpg" alt="설명">
+                            <img class="img swiper-lazy" src="" data-src="./src/img/wedding_pick/3.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img swiper-lazy" src="" data-src="./src/img/test1/4.jpg" alt="설명">
+                            <img class="img swiper-lazy" src="" data-src="./src/img/wedding_pick/4.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img swiper-lazy" src="" data-src="./src/img/test1/5.jpg" alt="설명">
+                            <img class="img swiper-lazy" src="" data-src="./src/img/wedding_pick/5.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img swiper-lazy" src="" data-src="./src/img/test1/6.jpg" alt="설명">
+                            <img class="img swiper-lazy" src="" data-src="./src/img/wedding_pick/6.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img swiper-lazy" src="" data-src="./src/img/test1/7.jpg" alt="설명">
+                            <img class="img swiper-lazy" src="" data-src="./src/img/wedding_pick/7.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
                 <li class="swiper__item">
                     <figure class="figure figure--round">
                         <div class="skeleton" style="padding-top:125.97%;">
-                            <img class="img swiper-lazy" src="" data-src="./src/img/test1/8.jpg" alt="설명">
+                            <img class="img swiper-lazy" src="" data-src="./src/img/wedding_pick/8.jpg" alt="설명">
                         </div>
                     </figure>
                 </li>
@@ -170,9 +170,9 @@
             <h1 class="wow fadeIn cover-heading"
                 style="text-align: right; margin-top: 0.5em; margin-right: 0.5em; font-size: 2rem;">
                 <span style="letter-spacing : -0.13em; margin-right: 0.1em">⎽⎽</span><br />
-                10 <br />
+                09 <br />
                 月 <br />
-                03 <br />
+                25 <br />
                 日 <br />
                 <span style="letter-spacing : -0.13em; margin-right: 0.1em;">⎺⎺</span>
             </h1>
@@ -180,8 +180,8 @@
         <main role="main" class="inner">
             <div class="wow fadeInUp">
                 <p class="top-title">최한서 · 권지은</p>
-                <p class="top-title-sub">토요일 오전 11시</p>
-                <p class="top-title-sub">스타시티 아트홀 5층 단독홀</p>
+                <p class="top-title-sub">일요일 오후 14시</p>
+                <p class="top-title-sub">MJ웨딩홀 ㅇㅇㅇㅇ홀</p>
                 <br /><br /><br />
                 <hr class="cover-container" />
                 <br />
@@ -208,8 +208,8 @@
             </div>
             <div class="wow fadeInUp">
                 <div class="section1-title section1-sub2">
-                    김상운<span class="small">의&nbsp아들&nbsp&nbsp</span>최한서<br />
-                    김남훈 · 정영희<span class="small">의&nbsp&nbsp&nbsp딸&nbsp&nbsp&nbsp</span>권지은
+                    최향진 · 이정희 <span class="small">의&nbsp아들&nbsp&nbsp</span>최한서<br />
+                    조은정<span class="small">의&nbsp&nbsp&nbsp딸&nbsp&nbsp&nbsp</span>권지은
                 </div>
                 <br /><br /><br /><br />
             </div>
@@ -239,7 +239,7 @@
                 불편한 마음으로 머물지 않고<br />
                 기분 좋은 소식이 되길 진심으로 바랍니다.<br />
                 <br />
-                신랑 김명운 신부 이재은 올림
+                신랑 최한서 신부 권지은 올림
             </p>
             <br /><br /><br /><br />
             <div class="section3 inner cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -247,88 +247,88 @@
                 <div id="carouselExampleControls" class="wow fadeIn carousel slide section3-image" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/test1/1.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/1.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/2.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/2.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/3.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/3.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/4.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/4.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/5.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/5.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/6.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/6.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/7.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/7.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/8.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/8.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/9.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/9.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/10.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/10.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/11.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/11.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/12.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/12.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/13.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/13.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/14.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/14.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/15.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/15.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/16.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/16.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/17.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/17.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/18.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/18.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/19.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/19.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/20.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/20.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/21.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/21.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/22.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/22.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/23.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/23.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/5.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/5.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/4.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/4.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/3.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/3.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/2.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/2.jpg" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/test1/1.jpg" class="d-block w-100">
+                            <img src="img/wedding_pick/1.jpg" class="d-block w-100">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
