--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
 
-        <!-- 테스트 -->
+        <!-- 테스트
 
         <div class="swiper">
             <ul class="swiper__list" aria-hidden="true">
@@ -157,7 +157,7 @@
                     <div class="bar"></div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
