--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                 <div class="container section4-title">
                     <div class="row">
                         <div class="col-6 section4-sec1-2">
-                            <span class="section4-sec1">신랑</span>
+                            <span class="section4-sec1-custom">신랑</span>
                             &nbsp&nbsp&nbsp
-                            <span class="section4-sec2">최한서</span>
+                            <span class="section4-sec2-custom">최한서</span>
                         </div>
                         <div class="col">
                             <button onclick="document.location.href='tel:010-5518-5773'" class="section4-sec3">
@@ -320,9 +320,9 @@
                     <br /><br />
                     <div class="row">
                         <div class="col-6 section4-sec1-2">
-                            <span class="section4-sec1">신부</span>
+                            <span class="section4-sec1-custom">신부</span>
                             &nbsp&nbsp&nbsp
-                            <span class="section4-sec2">권지은</span>
+                            <span class="section4-sec2-custom">권지은</span>
                         </div>
                         <div class="col">
                             <button onclick="document.location.href='tel:010-7187-0721'" class="section4-sec3-g">
@@ -345,26 +345,26 @@
                     <br />
                     <div class="row" style="margin-top:1rem; margin-bottom: 1rem">
                         <div class="col-6 section4-sec1-2">
-                            <span class="section4-sec1">신랑측 혼주</span>
+                            <span class="section4-sec1-custom">신랑측 혼주</span>
                         </div>
                         <div class="col section4-sec1-2">
-                            <span class="section4-sec1">신부측 혼주</span>
+                            <span class="section4-sec1-custom">신부측 혼주</span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6 section4-sec1-2">
-                            <span class="section4-sec1">아버지</span>
+                            <span class="section4-sec1-custom">아버지</span>
                             &nbsp&nbsp&nbsp
-                            <span class="section4-sec2">최향진</span>
+                            <span class="section4-sec2-custom">최향진</span>
                             <br />
-                            <span class="section4-sec1">어머니</span>
+                            <span class="section4-sec1-custom">어머니</span>
                             &nbsp&nbsp&nbsp
-                            <span class="section4-sec2">이정희</span>
+                            <span class="section4-sec2-custom">이정희</span>
                         </div>
                         <div class="col section4-sec1-2">
 
                             <br />
-                            <span class="section4-sec1">어머니</span>&nbsp&nbsp&nbsp<span class="section4-sec2">조은정</span>
+                            <span class="section4-sec1-custom">어머니</span>&nbsp&nbsp&nbsp<span class="section4-sec2-custom">조은정</span>
                         </div>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
 
             <div class="wow fadeInUp section7 inner cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
                 <br /><br />
-                <p class="wow fadeInUp section7-title section7-main">"참석이 어려우신 분들은 축하의 마음을 전해주세요</p>
+                <p class="wow fadeInUp section7-title section7-main">"참석이 어려우신 분들은<br/> 축하의 마음을 전해주세요"</p>
                 <br />
                 <!-- Button trigger modal -->
                 <button type="button" class="wow fadeInUp btn section7-button" data-toggle="modal" data-target="#groom">
