--- a/index.html
+++ b/index.html
@@ -87,25 +87,35 @@
           //아이폰일 경우
           var obj = document.getElementById("accnum" + id);
           var tmpTextarea = document.createElement("textarea");
-          tmpTextarea.value = obj.childNodes[1].textContent;
+          // tmpTextarea.value = obj.childNodes[1].textContent;
+          tmpTextarea.value = id;
 
           document.body.appendChild(tmpTextarea);
           tmpTextarea.select();
           tmpTextarea.setSelectionRange(0, 9999); // 셀렉트 범위 설정
-
           document.execCommand("copy");
           document.body.removeChild(tmpTextarea);
         } else {
           //안드로이드 경우
+          // var obj = document.getElementById("accnum" + id);
+          // var range = document.createRange();
+          // //텍스트 정보를 Range 객체에 저장
+          // range.selectNode(obj.childNodes[1]); //텍스트 정보를 Range 객체에 저장
+          // var sel = window.getSelection();
+          // sel.removeAllRanges(); //기존 선택정보 삭제
+          // sel.addRange(range); //텍스트 정보 선택
+          // document.execCommand("copy"); //복사
+          // sel.removeRange(range); //선택 정보 삭제
+
           var obj = document.getElementById("accnum" + id);
-          var range = document.createRange();
-          //텍스트 정보를 Range 객체에 저장
-          range.selectNode(obj.childNodes[1]); //텍스트 정보를 Range 객체에 저장
-          var sel = window.getSelection();
-          sel.removeAllRanges(); //기존 선택정보 삭제
-          sel.addRange(range); //텍스트 정보 선택
-          document.execCommand("copy"); //복사
-          sel.removeRange(range); //선택 정보 삭제
+          var tmpTextarea = document.createElement("textarea");
+          // tmpTextarea.value = obj.childNodes[1].textContent;
+          tmpTextarea.value = id;
+          document.body.appendChild(tmpTextarea);
+          tmpTextarea.select();
+          tmpTextarea.setSelectionRange(0, 9999); // 셀렉트 범위 설정
+          document.execCommand("copy");
+          document.body.removeChild(tmpTextarea);
         }
 
         // 복사 알림
