--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <link href="css/cover.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3c84f7676a32d1e0e61a658d50c70a6f"></script>
 
     <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/css/bootstrap.css' integrity='sha512-h1rwF0uB6r2IuEZcyjPrR53bBKN9Wb4yL+w3Rdlzmc3CkBF1gMSFvQIIstnu4bEtYDaKca5ke5S8UBAACRImyg==' crossorigin='anonymous'/> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js" integrity="sha512-Rd5Gf5A6chsunOJte+gKWyECMqkG8MgBYD1u80LOOJBfl6ka9CtatRrD4P0P5Q5V/z/ecvOCSYC8tLoWNrCpPg==" crossorigin="anonymous"></script> -->
-    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3c84f7676a32d1e0e61a658d50c70a6f"></script> -->
     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/cjs/popper.js' integrity='sha512-gEoe6YLb4ncJaTn8TjU8JuxEexnbeFyZ3MQbi0uyxd+MtmAGsEJ6wNrFsYJJ+nBS2zKM6C1vkrTuq9nRxO6twQ==' crossorigin='anonymous'></script> -->
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.js" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
@@ -65,7 +65,7 @@
             scrollContainer: null, // optional scroll container selector, otherwise use window,
             resetAnimation: true, // reset animation on end (default is true)
         });
-       
+
 
         $(document).ready(function () {
             let date = new Date(2022, 9, 25);
