--- a/index.html
+++ b/index.html
@@ -517,10 +517,9 @@
             <br /><br />
 
             <div class="wow fadeInUp section5 inner cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-                <br />
-                <p class="section5-title section5-main">Date</p>
+                <p class="section5-title section5-main-custom"> Wedding Day</p>
                 <p class="section5-title section5-sub-custom" style="margin-top: 0">
-                    09월 25일 · 일요일 · 오후 2시
+                    2022년 9월 25일 · 일요일 · 오후 2시
                 </p>
                 <table class="wow fadeInUp section5-title section5-table">
                     <tr>
@@ -583,7 +582,7 @@
                 <p class="wow fadeInUp section5-title-custom section5-sub-custom" style="margin-top: 1.3em">
                     한서 ❤️ 지은 결혼식이 <span id="d-day"></span>일 남았습니다.
                 </p>
-                <br /><br />
+               
             </div>
             <div class="wow fadeInUp inner cover-container d-flex w-100 h-100 mx-auto flex-column">
                 <br /><br />
@@ -593,7 +592,7 @@
                         MJ웨딩홀 5층 그랜드볼룸
                     </p>
                     <p class="section6-location-sub" style="text-align: center">
-                        서울특별시 강서구 양천로 476
+                        경기 부천시 경인로 386
                     </p>
                 </div>
                 <br />
