--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
             // 마커가 지도 위에 표시되도록 설정합니다
             marker.setMap(map);
+            map.setDraggable(draggable); 
         }
             
 
