--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 
             // 마커가 지도 위에 표시되도록 설정합니다
             marker.setMap(map);
-            map.setDraggable(false); 
+            // map.setDraggable(false); 
+            // map.setZoomable(false)
         }
             
 
