--- a/index.html
+++ b/index.html
@@ -700,8 +700,8 @@
 
   </script>
 
-
-<!-- <div class="ww-section bg-pinktone" id="gallery">
+<!-- 
+<div class="ww-section bg-pinktone" id="gallery">
     <div class="ww-photo-gallery pb-5">
       <div class="container">
         <h2
@@ -779,10 +779,10 @@
           <div class="gallery-wrapper">
             <div class="gallery" data-is-empty="false" data-columns="3">
               <figure class="gallery__item gallery__item--11">
-                <a href="images/gallery1.jpg" data-size="2487x3855"
+                <a href="img/wedding_pick/1.jpg" data-size="2487x3855"
                   ><img
                     loading="lazy"
-                    src="images/gallery1.jpg"
+                    src="img/wedding_pick/1.jpg"
                     alt="gallery1"
                     width="2487"
                     height="3855"
