--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                           </figure>
             
                           <figure class="gallery__item gallery__item--1D">
-                            <a href="img/mobile_pick/2.jpg" data-size="720x1080"
+                            <a href="img/mobile_pick/2.JPG" data-size="720x1080"
                               ><img
                                 loading="lazy"
                                 src="img/mobile_pick/2.JPG"
