--- a/index.html
+++ b/index.html
@@ -507,6 +507,29 @@
                                 height="1028"
                             /></a>
                           </figure>
+                          <figure class="gallery__item gallery__item--Z2">
+                            <a
+                              href="img/mobile_pick/14.JPG"
+                              data-size="769x1170"
+                              ><img
+                                loading="lazy"
+                                src="img/mobile_pick/14.JPG"
+                                width="769"
+                                height="1170"
+                            /></a>
+                          </figure>
+                          <figure class="gallery__item gallery__item--Z3">
+                            <a
+                              href="img/mobile_pick/15.JPG"
+                              data-size="1132x768"
+                              ><img
+                                loading="lazy"
+                                src="img/mobile_pick/15.JPG"
+                                width="1132"
+                                height="768"
+                            /></a>
+                          </figure>
+
                         </div>
                       </div>
             
