--- a/index.html
+++ b/index.html
@@ -530,6 +530,40 @@
                             /></a>
                           </figure>
 
+                          <figure class="gallery__item gallery__item--L1">
+                            <a
+                              href="img/mobile_pick/18.jpg"
+                              data-size="640x960"
+                              ><img
+                                loading="lazy"
+                                src="img/mobile_pick/18.jpg"
+                                width="640"
+                                height="960"
+                            /></a>
+                          </figure>
+                          <figure class="gallery__item gallery__item--L2">
+                            <a
+                              href="img/mobile_pick/16.jpg"
+                              data-size="960x640"
+                              ><img
+                                loading="lazy"
+                                src="img/mobile_pick/16.jpg"
+                                width="960"
+                                height="640"
+                            /></a>
+                          </figure>
+                          <figure class="gallery__item gallery__item--L3">
+                            <a
+                              href="img/mobile_pick/17.jpg"
+                              data-size="960x662"
+                              ><img
+                                loading="lazy"
+                                src="img/mobile_pick/17.jpg"
+                                width="960"
+                                height="662"
+                            /></a>
+                          </figure>
+
                         </div>
                       </div>
             
