--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                                     <br/>
                                     <p>위 아이콘을 클릭해주세요! </p>
                                     <p>안전운전 하시고 조심히 와주세요 </p>
-                                    <p>감사하고 반갑게 맞이할 준비가되었습니다 :) </p>
+                                    <p>감사하는 마음으로 반갑게 맞이할 준비가되었습니다 :) </p>
                                 </div>
                             </div>
                         </div>
