--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                 <p class="wow fadeInUp section6-title section6-main">오시는길</p>
                 <div class="wow fadeInUp section6-title">
                     <p class="section6-location-main" style="margin-bottom: 0">
-                        MJ웨딩홀 5층 그랜드볼룸
+                        MJ컨벤션 5층 그랜드볼룸
                     </p>
                     <p class="section6-location-sub" style="text-align: center">
                         경기 부천시 경인로 386
@@ -844,7 +844,7 @@
 
                 <div class="wow fadeInUp section6-location p-3">
                     <div class="accordion" id="accordionExample">
-                        <div class="card">
+                        <!-- <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0">
                                     <button class="section6-location section6-location-main btn btn-block" type="button"
@@ -862,29 +862,30 @@
                                     5층 그랜드볼룸
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="card">
                             <div class="card-header" id="headingTwo">
                                 <h2 class="mb-0">
                                     <button class="section6-location section6-location-main btn btn-block collapsed"
                                         type="button" data-toggle="collapse" data-target="#collapseTwo"
                                         aria-expanded="false" aria-controls="collapseTwo">
-                                        대중교통 / 자동차 이용시 빠른길찾기
+                                        대중교통 / 자동차 이용시 - 빠른길찾기
                                     </button>
                                 </h2>
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                                 data-parent="#accordionExample">
-                                <div class="card-body section6-location-sub seachMap">
+                                <div class="card-body section6-location-sub searchMap">
                                      <a
                                         href="https://m.search.naver.com/search.naver?where=m&query=%EB%B9%A0%EB%A5%B8%EA%B8%B8%EC%B0%BE%EA%B8%B0&nso_path=placeType%5Eplace%3Bname%5E%3Baddress%5E%3Blatitude%5E%3Blongitude%5E%3Bcode%5E%7Ctype%5Eplace%3Bname%5EMJ%EC%BB%A8%EB%B2%A4%EC%85%98%3Baddress%5E%3Bcode%5E37537597%3Blongitude%5E126.7984948%3Blatitude%5E37.4818021%7Cobjtype%5Epath%3Bby%5Epubtrans">
                                         <img src="img/icon/road.png">
                                     </a>
                                     <br/> 
                                     <br/>
-                                    <p>위 아이콘을 클릭해주세요! </p>
-                                    <p>안전운전 하시고 조심히 와주세요 </p>
-                                    <p>감사하는 마음으로 반갑게 맞이할 준비가되었습니다 :) </p>
+                                    <p >위 아이콘을 클릭해주세요! </p>
+                                    <p class="searchInfo">안전운전 하시고 조심히 와주세요 </p>
+                                    <p class="searchInfo">감사하는 마음으로 반갑게 </p>
+                                    <p class="searchInfo">맞이할 준비가되었습니다 :) </p>
                                 </div>
                             </div>
                         </div>
