--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                         <a href="img/mobile_pick/14.jpg" data-size="769x1170"><img loading="lazy"
                                                 src="img/mobile_pick/14.jpg" width="769" height="1170" /></a>
                                     </figure>
-                                  
+
                                     <figure class="gallery__item gallery__item--Z3">
                                         <a href="img/mobile_pick/16.jpg" data-size="960x640"><img loading="lazy"
                                                 src="img/mobile_pick/16.jpg" width="960" height="640" /></a>
@@ -757,7 +757,8 @@
                 </div>
                 <br /><br />
             </div>
-            <br /><br />
+            <hr class="cover-container" /><br />
+            <br />
 
             <div class="wow fadeInUp section5 inner cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
                 <p class="section5-title section5-main-custom"> Wedding Day</p>
@@ -827,6 +828,9 @@
                 </p>
 
             </div>
+            <br /> <br />
+            <hr class="cover-container" />
+
             <div class="wow fadeInUp inner cover-container d-flex w-100 h-100 mx-auto flex-column">
                 <br /><br />
                 <p class="wow fadeInUp section6-title section6-main">오시는길</p>
@@ -876,13 +880,13 @@
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                                 data-parent="#accordionExample">
                                 <div class="card-body section6-location-sub searchMap">
-                                     <a
+                                    <a
                                         href="https://m.search.naver.com/search.naver?where=m&query=%EB%B9%A0%EB%A5%B8%EA%B8%B8%EC%B0%BE%EA%B8%B0&nso_path=placeType%5Eplace%3Bname%5E%3Baddress%5E%3Blatitude%5E%3Blongitude%5E%3Bcode%5E%7Ctype%5Eplace%3Bname%5EMJ%EC%BB%A8%EB%B2%A4%EC%85%98%3Baddress%5E%3Bcode%5E37537597%3Blongitude%5E126.7984948%3Blatitude%5E37.4818021%7Cobjtype%5Epath%3Bby%5Epubtrans">
                                         <img src="img/icon/road.png">
                                     </a>
-                                    <br/> 
-                                    <br/>
-                                    <p >위 아이콘을 클릭해주세요! </p>
+                                    <br />
+                                    <br />
+                                    <p>위 아이콘을 클릭해주세요! </p>
                                     <p class="searchInfo">안전운전 하시고 조심히 와주세요 </p>
                                     <p class="searchInfo">감사하는 마음으로 반갑게 </p>
                                     <p class="searchInfo">맞이할 준비가되었습니다 :) </p>
