--- a/index.html
+++ b/index.html
@@ -693,14 +693,14 @@
                                 <span class="accountFont">신랑측 혼주</span>
                                 <br />
                                 <img src="img/icon/family.png" width="50px" height="50px" />&nbsp;&nbsp;
-                                기업 <span id="groomParentAccountNum">388-020194-01-017</span>최향진
+                                기업 <span id="groomParentAccountNum">388-020194-01-017</span>&nbsp;&nbsp;최향진
                                 <button type="button" id="accnum110114815335" class="account_copy"
                                     data-clipboard-target="#groomParentAccountNum">
                                     복사
                                 </button>
                                 <br />
                                 <img src="img/icon/family.png" width="50px" height="50px" />&nbsp;&nbsp;
-                                신한 <span id="groomParentMomAccountNum">110-375-361140</span>이정희
+                                신한 <span id="groomParentMomAccountNum">110-375-361140</span>&nbsp;&nbsp;이정희
                                 <button type="button" id="accnum110375361140" class="account_copy"
                                     data-clipboard-target="#groomParentMomAccountNum">
                                     복사
@@ -739,7 +739,7 @@
 
                                 <img src="img/icon/bride.png" width="50px" height="50px" />&nbsp;&nbsp;
 
-                                우리 <span id="brideAccountNum">1002-0614-13-070</span> 권지은
+                                우리 <span id="brideAccountNum">1002-0614-13-070</span>&nbsp;&nbsp;권지은
                                 <button type="button" class="account_copy" data-clipboard-target="#brideAccountNum">
                                     복사
                                 </button>
@@ -751,7 +751,7 @@
                                 <br />
                                 <img src="img/icon/family.png" width="50px" height="50px" />&nbsp;&nbsp;
 
-                                농협 <span id="brideParentAccountNum">006-02-061755</span>조은정
+                                농협 <span id="brideParentAccountNum">006-02-061755</span>&nbsp;&nbsp;조은정
                                 <button type="button" class="account_copy"
                                     data-clipboard-target="#brideParentAccountNum">
                                     복사
